--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Gupter:wght@400;500;700&family=Herr+Von+Muellerhoff&display=swap');
+ 
+#pic {
+    border-color: black;
+    border-style: solid;
 
+}
 *{
     box-sizing: border-box;
 }
